codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__execute_collaboration_mode_renders_indicator.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 6452
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  ? for shortcuts · Execute mode (shift+tab to cycle)        100% context left  "
